
** No lexer & parser error messages
When the lexer prints an error message, the parser no longer does.

** Improved operator<=>
Now ensuring return type is one of auto, std::partial_ordering,
std::strong_ordering, or std::weak_ordering; and that all parameters are a
class or reference thereto.

** C++ raw string literals
C++'s raw string literals `R"delim(...)delim"` are now supported.

** `makedoc.sh`
Added a small script to build the documentation rather than just call Doxygen.
The script prints the location of the document root and the local file URL.  On
macOS, also prints the `open` command to run.


* Changes in Cdecl 9.10

** Showing globs
The `show` command now supports globs:

    show foo*         // Show types starting with foo.
    show s::*foo      // Show types starting with foo in top-level scope s.
    show s*::foo      // Show foo types in top-level scopes starting with s.
    show *::foo       // Show foo types in any top-level scope.
    show **::foo      // Show foo types in any scope.

** "Did you mean ...?" for command-line options
"Did you mean ...?" suggestions have been added for command-line long options.

** C78 in help
Added C78 to help text.

** `template` declarations
Now recognizing `template` just to say it's not supported.

** Fixed "null" for unknown name
No longer sometime print "null" when an unknown name is encountered.


* Changes in Cdecl 9.9

** C78
C78 is now accepted as an alias for K&RC.

** "Did you mean ...?" for `set` options
"Did you mean ...?" suggestions have been added for `set` options.

** More predefined types
Added `iconv_t`, `locale_t`, `posix_spawnattr_t`, `posix_spawn_file_actions_t`,
`regex_t`, `regmatch_t`, and `regoff_t`.

** Nested types in C
Nested types:

    struct S { typedef int Int; }

are now correctly caught as an error in C.

** Pointer-to-function qualifiers
A pointer to function with qualifiers, e.g.:

    int (*f)() const                    // illegal

is now correctly caught as an error.
