@@ -1,0 +1,1 @@
+declare x as register structure S
