@@ -1,1 +1,1 @@
-cdecl @ @ @ explain register struct S x @ 65
+cdecl @ @ @ explain register struct S x @ 0
